tests/ui/trait-bounds/enum-unit-variant-trait-bound.stderr
error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/enum-unit-variant-trait-bound.rs:4:22
   |
LL |     let _ = Option::<[u8]>::None;
   |                      ^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `None`
  --> $SRC_DIR/core/src/option.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
